--- a/homepage/about.html
+++ b/homepage/about.html
@@ -20,9 +20,12 @@
   <link rel="stylesheet" href="css/header-inner.css">
   <link rel="stylesheet" href="css/icon.css">
   <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="nav.css">
   <link rel="stylesheet" href="css/person-img.css">
   <link rel="stylesheet" href="css/toTopBtn.css">
+  <link rel="stylesheet" href="css/nav.css">
   <script src="js/toTop.js"></script>
+  <script src="js/nav-toggle.js"></script>
 </head>
 
 <body>
@@ -37,7 +40,12 @@
   </div>
 </header>
 
-<nav>
+<button class="nav-toggle" id="navToggle">
+  <span></span>
+  <span></span>
+  <span></span>
+</button>
+<nav id="mainNav" class="nav">
   <a href="home.html">ホーム</a>
   <a href="about.html">劇団紹介</a>
   <a href="shows.html">公演情報</a>
