--- a/homepage/about.html
+++ b/homepage/about.html
@@ -25,7 +25,7 @@
   <link rel="stylesheet" href="css/toTopBtn.css">
   <link rel="stylesheet" href="css/nav.css">
   <script src="js/toTop.js"></script>
-  <script src="js/nav-toggle.js"></script>
+  <script src="js/navToggle.js"></script>
 </head>
 
 <body>
@@ -39,12 +39,7 @@
     <p>継いで、剥いで、あなたを魅せる舞台を作る。</p>
   </div>
 </header>
-
-<button class="nav-toggle" id="navToggle">
-  <span></span>
-  <span></span>
-  <span></span>
-</button>
+<button id="navToggle" class="nav-toggle">☰</button>
 <nav id="mainNav" class="nav">
   <a href="home.html">ホーム</a>
   <a href="about.html">劇団紹介</a>
