--- a/homepage/admin.html
+++ b/homepage/admin.html
@@ -12,6 +12,9 @@
     <div class="stats">
       <h2>アクセス数</h2>
       <p id="accessCount">読み込み中...</p>
+      <p>このデータは適当だよ～</p>
+      <h2>ほかにしたい事</h1>
+      <p>✅ ログイン数（アクセス数）を見たい<br>✅ 公演情報の編集<br>✅ お知らせの更新<br>✅ メンバー紹介の追加・編集<br>✅ お問い合わせの閲覧</p>
     </div>
     <button id="logoutBtn">ログアウト</button>
   </div>
@@ -23,7 +26,7 @@
 
     // 仮データ
     document.getElementById('accessCount').textContent = '123 回';
-
+ 
     // ログアウト
     document.getElementById('logoutBtn').addEventListener('click', () => {
       sessionStorage.removeItem('loggedIn');
