--- a/homepage/admin.html
+++ b/homepage/admin.html
@@ -12,7 +12,7 @@
     <div class="stats">
       <h2>アクセス数</h2>
       <p id="accessCount">読み込み中...</p>
-      <p>このデータは適当だよ～</p>
+      <p>このデータは適当だよ～<br>データベースがわからんからどうしようもない<br>Node.js勉強しまっす</p>
       <h2>ほかにしたい事</h1>
       <p>✅ ログイン数（アクセス数）を見たい<br>✅ 公演情報の編集<br>✅ お知らせの更新<br>✅ メンバー紹介の追加・編集<br>✅ お問い合わせの閲覧</p>
     </div>
