--- a/homepage/secret.html
+++ b/homepage/secret.html
@@ -62,7 +62,7 @@
     const pw = document.getElementById('password').value;
 
     // 仮のパスワード認証
-    if (pw === 'tsugihagi06') {   // パスワードダダ洩れで草。サーバーの知識皆無すぎてむせび泣く
+    if (pw === 'test') {   // パスワードダダ洩れで草。
       sessionStorage.setItem('loggedIn', 'true');
       location.href = 'admin.html';
     } else {
