--- a/homepage/index.html
+++ b/homepage/index.html
@@ -3,7 +3,6 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="robots" content="index,follow">
   <meta name="description" content="劇団つぎはぎの公式サイト。公演情報、支援チケット、お問い合わせなど">
   <meta property="og:title" content="劇団つぎはぎ 公式サイト">
   <meta property="og:description" content="誰継いで、剥いで、あなたを魅せる舞台を作る。">
@@ -15,7 +14,6 @@
   <meta property="og:image" content="https://Nijuju1180.github.io/tsugihagi/images/og-image.png">
   <meta name="twitter:site" content="@tsugihagi_troup">
   <title>劇団つぎはぎ - 公式サイト</title>
-  <link rel="icon" href="images/favicon.ico" type="image/x-icon">
   <style>
     html, body {
       margin: 0;
@@ -32,7 +30,7 @@
       height: 100%;
       color: white;
       font-size: 2rem;
-      background-image: url('images/back2.png'); /* ← 背景画像を指定 */
+      background-image: url('images/back.png'); /* ← 背景画像を指定 */
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
@@ -49,7 +47,7 @@
       left: 0;
       width: 100%;
       height: 100%;
-      background-color: black;
+      background-color: white;
       opacity: 0;
       z-index: 2;
       pointer-events: none;
@@ -71,24 +69,39 @@
       to {
         opacity: 1;
       }
+
+    }
+      .center-container {
+      display: flex;
+      justify-content: center; /* 横方向に中央寄せ */
+      align-items: center;     /* 縦方向に中央寄せ */
+      height: 100vh;
+    }
+
+    .center-container img {
+      max-width: 80%;
+      max-height: 80%;
+      object-fit: contain;
     }
   </style>
 </head>
 <body>
   <div id="splash"></div>
   <div id="blackout"></div>
+  <div id="splash">
+    <div class="center-container">
+      <img src="images/title.png" alt="ロゴ画像">
+    </div>
+  </div>
+
+ <div id="blackout"></div>
 
   <script>
-    // アニメーション終了後に黒画面→home.htmlへ
     setTimeout(() => {
-      // 黒い画面をフェードイン
       document.getElementById("blackout").classList.add("fade-in");
-
-      // 黒画面が出たあと（0.5秒後）にジャンプ
       setTimeout(() => {
         window.location.href = "home.html";
       }, 500);
-    }, 5000); // 3秒待ってからfadeOut(2秒) → 合計5秒
+    }, 5000);
   </script>
 </body>
-</html>
