--- a/homepage/about.html
+++ b/homepage/about.html
@@ -23,6 +23,7 @@
   <link rel="stylesheet" href="css/nav.css">
   <link rel="stylesheet" href="css/toTopBtn.css">
   <script src="js/iconClick.js"></script>
+  <script src="js/navToggle.js"></script>
   <script src="js/toTop.js"></script>
 </head>
 
